@@ -1,31 +1,30 @@
-
 using System;
 
 namespace GameOfLife
 {
 
-	// Regelmotor
-	// - Tar i mot ein tabell og reknar ut den nye tabellen
-	public class Rule
-	{
+    // Regelmotor
+    // - Tar i mot ein tabell og reknar ut den nye tabellen
+    public class Rule
+    {
 
-		public Rule ()
-		{
-		}
-		
-		public void ApplyRule (Table table) 
-		{
-			// Forslag til regelfunksjon frå Trond
-			
-			// Frå Gaute: Hent ny og gammal tabell frå Table
-			// Sjekk at vi får ein 'peikar'/'ref' og ikkje ein kopi.. ?
+        public Rule ()
+        {
+        }
+
+        public void ApplyRule (Table table)
+        {
+            // Forslag til regelfunksjon frå Trond
+
+            // Frå Gaute: Hent ny og gammal tabell frå Table
+            // Sjekk at vi får ein 'peikar'/'ref' og ikkje ein kopi.. ?
             int[,] tabOrg = table.TableNow;
             int[,] tabNy = table.TableNext;
 
             // A og B er kordinatene i et grid.
             int A = 0; // A, rad. 0,0 - 0, 1 = a, 0 - a, 1
             int B = 0; // B, kolonne. 0,0 - 0 , 1 = 0, b - 0, b+1
-            
+
             int nabo = 0;
 
             for (; A <= 30;A++ )
@@ -35,7 +34,7 @@ namespace GameOfLife
                 {
                     // forløkke skal gå igjennom alle kolonnene.
 
-                    // Kode skal sjekke alle cellene rundt en celle med kord. A,B. 
+                    // Kode skal sjekke alle cellene rundt en celle med kord. A,B.
                     // Og telle opp hvor mange celler det er noe i.
                     if (!((A+1) > 30 || (A-1) < 0 || (B+1) > 30 || (B-1) < 0))
                     {
@@ -47,7 +46,7 @@ namespace GameOfLife
                             nabo++;
                         if (tabOrg[A, B - 1] != 0)
                             nabo++;
-                        if (tabOrg[A, B + 1] != 0) // hopper jo over A,B. 
+                        if (tabOrg[A, B + 1] != 0) // hopper jo over A,B.
                             nabo++;
                         if (tabOrg[A + 1, B - 1] != 0)
                             nabo++;
@@ -58,7 +57,7 @@ namespace GameOfLife
                     } // slutt if\else
 
 
-                    // Hvis det er noe i A,B så skal cellen dø om det er 0,1,4-8 celler rundt. 
+                    // Hvis det er noe i A,B så skal cellen dø om det er 0,1,4-8 celler rundt.
                     // og leve om det er 2,3.
                     // Hvis det er tom celle skal det bli ny celle ved at det er 3 naboer.
 
@@ -80,6 +79,8 @@ namespace GameOfLife
                     // klar for ny runde...
                 }
             }
-		}
-	}
+        }
+    }
 }
+
+// vim: set noai sw=4 tw=4 ts=4:
